[package]
name = "redtake"
version = "0.1.0"
edition = "2021"
description = "Create reddit text to speech videos without any editing"
repository = "https://github.com/clitic/redtake"
documentation = "https://docs.rs/redtake"
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
exclude = ["docs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
clap = { version = "3.1", features = ["derive"] }
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" }
kdam = "0.1.7"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[features]
default = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
